--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <button type="button" id="pair-device">Pair Device</button>
   <script src="./popup.js"></script>
 </body>
 
